src/objects/Lending_App_Offer__c.object
<CustomObject>
    <description>Offers returned from the API of participating lenders based on the Lending App Application. Offers are associated with a patient by Account_c (Account.Id).</description>
    <fields>
        <fullName>APR__c</fullName>
        <description>Annual percentage rate for loan offer.</description>
        <label>APR</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Patient&apos;s account number.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Lending App Offers</relationshipLabel>
        <relationshipName>Lending_App_Offers</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lender__c</fullName>
        <description>Name of the participating lender associated with the offer.</description>
        <label>Lender</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Application_Url__c</fullName>
        <description>The URL of the offer. Links to the lender website.</description>
        <label>Loan Application Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Max_Line__c</fullName>
        <description>Maximum amount a patient can borrow.</description>
        <label>Max Line</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_Line__c</fullName>
        <description>Minimum amount that a patient can apply to borrow.</description>
        <label>Min Line</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Payment__c</fullName>
        <description>Estimated monthly payment assuming the patient borrows the maximum amount. Calculated in the CtrlLendingApp controller.</description>
        <label>Monthly Payment</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Promotional_Period__c</fullName>
        <description>The period during which promotional offers have no/low interest.</description>
        <label>Promotional Period</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <description>Period over which the loan agreement is in force, and before or at the end of which the loan should either be repaid or renegotiated for another term.</description>
        <label>Term</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Lending App Offer</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Lending App Offer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lending App Offers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>